Added some more to website

--- a/websites/eduford/index.html
+++ b/websites/eduford/index.html
@@ -4,6 +4,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>University Website Design</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <section class="header">
@@ -19,6 +22,11 @@
                     </ul>
                 </div>
             </nav>
+            <div class="text-box">
+                <h1>World's Biggest University</h1>
+                <p>Making website is now one of the easiest thing in the world. You just need to learn HTML, CSS, Javascript and youu are good to go.    
+                </p>
+            </div>
         </section>
     </body>
 </html>
